# qmaster

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  run.sh  setup-aliases.sh  setup.sh
.claude/commands/: qm-setup.md
.claude/rules/: code-quality.md  error-handling.md  file-operations.md  security.md  web-layer.md
.claude/scripts/: preflight-comprehensive.sh
.claude/skills/qm-commit/: SKILL.md
.claude/skills/qm-feature/: SKILL.md
.claude/skills/qm-fix/: SKILL.md
.claude/skills/qm-review/: SKILL.md
.claude/skills/qm-ship/: SKILL.md
.claude/skills/qm-simplify/: SKILL.md
.github/workflows/: test.yml
config/: databases.yaml.example  projects.yaml.example  settings.yaml.example
src/: cli.py
src/commands/: init_cmd.py
src/core/: backup_engine.py  config_manager.py  discovery.py  git_manager.py
src/core/backup/: __init__.py  constants.py  database_ops.py  engine.py  git_ops.py  metadata.py  project_ops.py  retention.py  sync.py
src/utils/: __init__.py  background_backup.py  claude_config_manager.py  html_cleaner.py  log_parser.py  notifications.py  php_log_parser.py  retention_manager.py  scheduler.py  storage_analyzer.py  text_sanitizer.py  web_scraper.py
src/utils/claude/: __init__.py  advanced_cleanup.py  backup_cleanup.py  base.py  cleanup.py  conversations.py  mcp.py  session_inspector.py  stats.py
src/web/: app.py  cache.py  dashboard_visualizations.py  state.py  theme.py
src/web/components/: __init__.py  action_bar.py  backup_card.py  data_table.py  empty_state.py  layout.py  metrics.py  status_badge.py
src/web/views/: __init__.py  claude_code.py  claude_code_cleanup.py  dashboard.py  databases.py  html_cleaner.py  logs_diagnostics.py  projects.py  storage_cleanup.py  text_sanitizer.py  tools.py  web_scraper.py
tests/: __init__.py  test_imports.py
