[project]
name = "qmaster"
version = "1.0.0"
requires-python = ">=3.11"

[project.scripts]
qm = "cli:cli"

# ──────────────────────────────────────────────
# Ruff - Linting & Formatting (replaces flake8, isort, pylint, black)
# ──────────────────────────────────────────────
[tool.ruff]
target-version = "py311"
line-length = 120
src = ["src"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort (import sorting)
    "N",     # pep8-naming
    "UP",    # pyupgrade (modern Python syntax)
    "B",     # flake8-bugbear (common bugs)
    "S",     # flake8-bandit (security, overlaps with bandit)
    "A",     # flake8-builtins (shadowing builtins)
    "C4",    # flake8-comprehensions
    "SIM",   # flake8-simplify
    "TCH",   # flake8-type-checking (move imports behind TYPE_CHECKING)
    "PTH",   # flake8-use-pathlib
    "RUF",   # ruff-specific rules
]
ignore = [
    "E501",   # line too long (formatter handles this)
    "S101",   # assert used for mypy type narrowing (not just tests)
    "S603",   # subprocess call with shell=False (we need subprocess)
    "S607",   # partial executable path (we call system tools like tar, mysqldump)
    "S108",   # hardcoded temp directory (we use /tmp intentionally)
    "PTH123", # open() vs Path.open() - existing codebase uses open(), adopt incrementally
    "PTH110", # os.path.exists - adopt pathlib incrementally
    "PTH101", # os.chmod - adopt pathlib incrementally
    "PTH107", # os.remove - adopt pathlib incrementally
    "PTH114", # os.path.islink - adopt pathlib incrementally
    "PTH116", # os.stat - adopt pathlib incrementally
    "PTH117", # os.path.isabs - adopt pathlib incrementally
    "PTH118", # os.path.join - adopt pathlib incrementally
    "PTH119", # os.path.basename - adopt pathlib incrementally
    "PTH120", # os.path.dirname - adopt pathlib incrementally
    "PTH100", # os.path.abspath - adopt pathlib incrementally
    "PTH108", # os.unlink - adopt pathlib incrementally
    "PTH207", # glob - adopt pathlib incrementally
    "RUF001", # ambiguous unicode characters (we use ℹ as info icon intentionally)
    "RUF012", # mutable class default - class constants are fine
    "S110",   # try-except-pass (used intentionally for fallback chains)
    "SIM105", # contextlib.suppress - try/except is clearer in tight loops
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]  # allow assert in tests
"src/cli.py" = ["A002"]     # Click maps --all/--format to `all`/`format` params (unavoidable)

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

# ──────────────────────────────────────────────
# Mypy - Static Type Checking (like PHPStan)
# ──────────────────────────────────────────────
[tool.mypy]
python_version = "3.11"
mypy_path = "src"
explicit_package_bases = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false       # start permissive, tighten later
check_untyped_defs = true           # still check inside untyped functions
ignore_missing_imports = true       # don't fail on missing stubs (streamlit, etc.)
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

# ──────────────────────────────────────────────
# Bandit - Security Scanner
# ──────────────────────────────────────────────
[tool.bandit]
exclude_dirs = ["tests", "venv"]
skips = ["B603", "B607"]  # same as ruff S603/S607 - we intentionally use subprocess

# ──────────────────────────────────────────────
# Pytest
# ──────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
